added charge wheel sole, some css fixes, and improvements to icon chart and icon chart sole

--- a/src/app/Core/auth/login/login.component.css
+++ b/src/app/Core/auth/login/login.component.css
@@ -64,6 +64,10 @@ input::placeholder {
     
     
 }
+.password{
+    display: flex;
+    justify-content: center;
+}
 .login-button button{
     display: flex;
     width: 50%;
