--- a/src/app/Core/auth/login/login.component.html
+++ b/src/app/Core/auth/login/login.component.html
@@ -51,9 +51,8 @@
                         <strong>Error!</strong> Este campo es obligatorio, ingrese la contraseña
                     </div>
                 </div>
-                <div>
-                    <button type="button" class="forgot-password" (click)="showNotification()">¿Olvidó su
-                        Contraseña?</button>
+                <div class="password">
+                    <button type="button" class="forgot-password" (click)="showNotification()">¿Olvidó suContraseña?</button>
                 </div>
             </div>
             <div class="login-button">
