--- a/src/app/Modules/Pages/areas-view/areas/areas.component.html
+++ b/src/app/Modules/Pages/areas-view/areas/areas.component.html
@@ -5,3 +5,5 @@
     <a><button (click)="openModalCreate()"class="add">Añadir</button></a>
     <app-icon-chart-sole [view]="this.soleView" (dataToUpdate)="Update($event)" (dataToDelete)="Delete($event)"></app-icon-chart-sole>
     <app-charge-wheel [view]="this.view" (dataToUpdate)="Update($event)" (dataToDelete)="Delete($event)"></app-charge-wheel> 
+    <app-charge-wheel-sole [view]="this.soleView" (dataToUpdate)="Update($event)" (dataToDelete)="Delete($event)"></app-charge-wheel-sole> 
+    asdasdasdaqwekljqlke
