--- a/src/app/Modules/Components/icon-chart/icon-chart.component.html
+++ b/src/app/Modules/Components/icon-chart/icon-chart.component.html
@@ -1,4 +1,4 @@
-<div class="wallpaper">
+<div class="wallpaper" *ngIf="this.generate">
   <div class="slider">
     <div class="slide-item" *ngFor="let item of view | Paginate: page_size: page_number">
       <div class="area">
@@ -6,7 +6,10 @@
           <img width="64" height="64" src={{item.iconUrl}} alt="artificial-intelligence" />
         </picture>
         <div class="container">
-          <p [ngClass]="{ 'animate': item.itemName.length > 11 }">{{ item.itemName }}</p>
+          <p [ngClass]="{
+            'animateLonger': item.itemName.length >= 20,
+            'animate': item.itemName.length < 20 && item.itemName.length > 11
+          }">{{ item.itemName }}</p>
           <p>{{ item.itemOne }}</p>
           <p *ngIf="item.itemTwo">{{ item.itemTwo }}</p>
           <p *ngIf="item.itemThree">{{ item.itemThree }}</p>
@@ -14,10 +17,10 @@
         <div class="button">
           <a><button>ir</button></a>
         </div>
-      </div>
-      <div class="actions">
-        <button (click)="openModalUpdate(item)"><img src="../../../assets/icons/reload.svg"></button>
-        <button (click)="deleteItem(item.itemId, item.itemName)"><img src="../../../assets/icons/delete.svg"></button>
+        <div class="actions">
+          <button (click)="openModalUpdate(item)"><img src="../../../assets/icons/reload.svg"></button>
+          <button (click)="deleteItem(item.itemId, item.itemName)"><img src="../../../assets/icons/delete.svg"></button>
+        </div>
       </div>
     </div>
   </div>
