added charge wheel sole, some css fixes, and improvements to icon chart and icon chart sole

--- a/src/app/Modules/Components/charge-wheel-sole/charge-wheel-sole.component.css
+++ b/src/app/Modules/Components/charge-wheel-sole/charge-wheel-sole.component.css
@@ -1,10 +1,11 @@
-.content-wheel1 {
+.content-wheel {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-between;
     gap: 50px;
     padding: 50px 0;
+    margin-top: 10px;
 }
 
 
