--- a/src/app/Modules/Components/charge-wheel/charge-wheel.component.html
+++ b/src/app/Modules/Components/charge-wheel/charge-wheel.component.html
@@ -1,28 +1,35 @@
-<div class="content-wheel" *ngIf="generate">
-  <div class="charge_wheel" *ngFor="let item of  this.view; index as i">
-    <div class="porcentajes" style="--porcentaje: {{porcentajeNumerico}}">
-      <div class="content">
-        <div class="container">
-          <p [ngClass]="{
+<div *ngIf="generate">
+  <div class="content-wheel">
+    <div class="charge_wheel" *ngFor="let item of  this.view | Paginate: page_size: page_number; index as i">
+      <div class="porcentajes" style="--porcentaje: {{porcentajeNumerico}}">
+        <div class="content">
+          <div class="container">
+            <p [ngClass]="{
             'animateLonger': item.itemName.length >= 20,
             'animate': item.itemName.length < 20 && item.itemName.length > 11
           }"> {{item.itemName}} </p>
-          <p> ID: {{item.itemId}} </p>
-          <p *ngIf="item.itemOne"> Cod: {{item.itemOne}} </p>
-          <p *ngIf="item.itemTwo"> {{item.itemTwo}} </p>
-          <p *ngIf="item.itemThree"> {{item.itemThree}} </p>
-          <p *ngIf="item.itemFour"> {{item.itemFour}} </p>
-          <p>100%</p>
+            <p> ID: {{item.itemId}} </p>
+            <p *ngIf="item.itemOne"> Cod: {{item.itemOne}} </p>
+            <p *ngIf="item.itemTwo"> {{item.itemTwo}} </p>
+            <p *ngIf="item.itemThree"> {{item.itemThree}} </p>
+            <p *ngIf="item.itemFour"> {{item.itemFour}} </p>
+            <p>100%</p>
+          </div>
+          <div class="actions">
+            <button (click)="openModalUpdate(item)"><img src="../../../assets/icons/reload.svg"></button>
+            <button (click)="deleteItem(item.itemId, item.itemName)"><img
+                src="../../../assets/icons/delete.svg"></button>
+          </div>
         </div>
-        <div class="actions">
-          <button (click)="openModalUpdate(item)"><img src="../../../assets/icons/reload.svg"></button>
-          <button (click)="deleteItem(item.itemId, item.itemName)"><img src="../../../assets/icons/delete.svg"></button>
-        </div>
+        <svg width="230px" height="230px">
+          <circle r="100px" cx="50%" cy="50%" pathLength="100" [style.stroke]="colores[0]"></circle>
+          <circle r="100px" cx="50%" cy="50%" pathLength="100" [style.stroke]="colores[0]"></circle>
+        </svg>
       </div>
-      <svg width="230px" height="230px">
-        <circle r="100px" cx="50%" cy="50%" pathLength="100" [style.stroke]="colores[0]"></circle>
-        <circle r="100px" cx="50%" cy="50%" pathLength="100" [style.stroke]="colores[0]"></circle>
-      </svg>
     </div>
   </div>
+  <mat-paginator [length]="view.length" [pageSize]="page_size" [hidePageSize]=true (page)="handlePage($event)"
+    showFirstLastButtons>
+  </mat-paginator>
+
 </div>
