added first version of board-table, css and visual fixes needed

--- a/src/app/Modules/Pages/areas-view/areas/areas.component.html
+++ b/src/app/Modules/Pages/areas-view/areas/areas.component.html
@@ -6,4 +6,4 @@
     <app-icon-chart-sole [view]="this.soleView" (dataToUpdate)="Update($event)" (dataToDelete)="Delete($event)"></app-icon-chart-sole>
     <app-charge-wheel [view]="this.view" (dataToUpdate)="Update($event)" (dataToDelete)="Delete($event)"></app-charge-wheel> 
     <app-charge-wheel-sole [view]="this.soleView" (dataToUpdate)="Update($event)" (dataToDelete)="Delete($event)"></app-charge-wheel-sole> 
-    asdasdasdaqwekljqlke
+    <app-board-table [view]="this.tableView" (dataToUpdate)="Update($event)" (dataToDelete)="Delete($event)"></app-board-table>
