added changes and optimization  to board table models

--- a/src/app/Modules/Components/board-table/board-table.component.html
+++ b/src/app/Modules/Components/board-table/board-table.component.html
@@ -1,7 +1,7 @@
 <table class="container" *ngIf="generate">
     <thead>
         <tr>
-            <th *ngFor="let item of this.viewTitles.itemTitles">
+            <th *ngFor="let item of this.viewTitles">
                 <h1> {{item}} </h1>
             </th>
         </tr>
