--- a/src/app/Modules/Components/board/board.component.css
+++ b/src/app/Modules/Components/board/board.component.css
@@ -29,13 +29,15 @@ body {
     padding: 0 0 2em 0;
 }
 
+td:hover .container{
+    background-color: red;
+}
+
 .container td,
 .container th {
-    
     padding-bottom: 2%;
     padding-top: 2%;
-    padding-left: 15px;
-    transition: 0.4s;
+    padding-left: 2%;
 }
 
 .container tr:nth-child(odd) {
