create new table

--- a/src/app/Modules/Pages/areas-view/areas/areas.component.html
+++ b/src/app/Modules/Pages/areas-view/areas/areas.component.html
@@ -7,3 +7,4 @@
     <app-charge-wheel [view]="this.view" (dataToUpdate)="Update($event)" (dataToDelete)="Delete($event)"></app-charge-wheel> 
     <app-charge-wheel-sole [view]="this.soleView" (dataToUpdate)="Update($event)" (dataToDelete)="Delete($event)"></app-charge-wheel-sole> 
     <app-board-table [view]="this.tableView" (dataToUpdate)="Update($event)" (dataToDelete)="Delete($event)"></app-board-table>
+    <app-board></app-board>
