--- a/src/app/Modules/Components/board/board.component.css
+++ b/src/app/Modules/Components/board/board.component.css
@@ -1,68 +1,46 @@
-body {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 300;
-    line-height: 1.42em;
-    color: #A7A1AE;
-    background-color: #1F2739;
+.container{
+    width: auto;
+    display: flex;
 }
-.container th h1 {
+.board{
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    border-radius: 15px;
+    background-color: #1f2739b5;
+    border: solid #203363 1px
+}
+.container li{
+    border-bottom:solid 1px  #203363 ;
+    padding: 5px;
+}
+.container li:last-child{
+    border: none;
+}
+.container  h1 {
     font-weight: bold;
     font-size: 1em;
     text-align: left;
+    padding: 10px;
     color: #185875;
+    
+}
+.board li{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+.board li p{
+    padding: 10px 20px;
+    
+}
+.board ul{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0px;
+    margin: 0;
 }
 
-.container td {
-    font-weight: normal;
-    font-size: 1em;
-    -webkit-box-shadow: 0 2px 2px -2px #0E1119;
-    -moz-box-shadow: 0 2px 2px -2px #0E1119;
-    box-shadow: 0 2px 2px -2px #0E1119;
-}
 
-.container {
-    text-align: left;
-    overflow: hidden;
-    width: 80%;
-    margin: 0 auto;
-    display: table;
-    padding: 0 0 2em 0;
-}
 
-td:hover .container{
-    background-color: red;
-}
-
-.container td,
-.container th {
-    padding-bottom: 2%;
-    padding-top: 2%;
-    padding-left: 2%;
-}
-
-.container tr:nth-child(odd) {
-    background-color: #323C50;
-}
-
-.container tr:nth-child(even) {
-    background-color: #2C3446;
-}
-
-.container th {
-    background-color: #1F2739;
-}
-
-.container td:first-child {
-    color: #f7f7f7;
-}
-
-.container tr:hover td {
-    background-color: #192239;
-    color: #006B00;
-    font-weight: bold;
-    box-shadow: #111727 -1px 1px, #111727 -2px 2px, #111727 -3px 3px, #111727 -4px 4px, #111727 -5px 5px, #111727 -6px 6px;
-    transform: translate3d(6px, -6px, 0);
-    transition-duration: 0.4s;
-    transition-property: all;
-    transition-timing-function: line;
-}
