--- a/src/app/Modules/Components/board/board.component.html
+++ b/src/app/Modules/Components/board/board.component.html
@@ -1,28 +1,37 @@
-<table class="container">
-	<thead>
-		<tr>
-			<th>
-				<h1>ID</h1>
-			</th>
-			<th>
-				<h1>ID</h1>
-			</th>
-			<th>
-				<h1>ID</h1>
-			</th>
-			<th>
-				<h1>ID</h1>
-			</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<td>1</td>
-			<td>Cristian</td>
-			<td>Suarez</td>
-			<td>1089487451</td>
-			<td>11/07/97</td>
-			<td>01:32:50</td>
-		</tr>
-	</tbody>
-</table>
+
+<div class="container">
+	<div class="board">
+		<div class="main">
+			<ul>
+				<li>
+					<h1>Nombre :</h1>
+					<p>Cristian</p>
+				</li>
+				<li>
+					<h1>Apellido :</h1>
+					<p>Suarez</p>
+				</li>
+				<li>
+					<h1>Cedula :</h1>
+					<p>1089487451</p>
+				</li>
+				<li>
+					<h1>Celular :</h1>
+					<p>3168087491</p>
+				</li>
+				<li>
+					<h1>Apellido :</h1>
+					<p>Suarez</p>
+				</li>
+				<li>
+					<h1>Cedula :</h1>
+					<p>1089487451</p>
+				</li>
+				<li>
+					<h1>Celular :</h1>
+					<p>3168087491</p>
+				</li>
+			</ul>
+		</div>
+	</div>
+</div>
