added pagination control to board-table and some css fixes

--- a/src/app/Modules/Components/board-table/board-table.component.html
+++ b/src/app/Modules/Components/board-table/board-table.component.html
@@ -1,14 +1,19 @@
-<table class="container" *ngIf="generate">
-    <thead>
-        <tr>
-            <th *ngFor="let item of this.viewTitles">
-                <h1> {{item}} </h1>
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let item of this.viewData">
-            <td *ngFor="let data of item.itemData"> {{data}} </td>
-        </tr>
-    </tbody>
-</table>
+<div class="table-container" *ngIf="generate">
+    <table class="container">
+        <thead>
+            <tr>
+                <th *ngFor="let item of this.viewTitles">
+                    <h1> {{item}} </h1>
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let item of this.viewData | Paginate: page_size: page_number">
+                <td *ngFor="let data of item.itemData"> {{data}} </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+<mat-paginator *ngIf="generate" [length]="viewData.length" [pageSize]="page_size" [hidePageSize]=true (page)="handlePage($event)"
+showFirstLastButtons>
+</mat-paginator>
