--- a/src/app/Modules/Components/board-table/board-table.component.css
+++ b/src/app/Modules/Components/board-table/board-table.component.css
@@ -5,20 +5,24 @@ body {
     color: #A7A1AE;
     background-color: #1F2739;
 }
+
 .container th h1 {
     font-weight: bold;
     font-size: 1em;
-    text-align: left;
+    text-align: center;
     color: #185875;
 }
 
 .container td {
     font-weight: normal;
-    font-size: 1em;
     -webkit-box-shadow: 0 2px 2px -2px #0E1119;
     -moz-box-shadow: 0 2px 2px -2px #0E1119;
     box-shadow: 0 2px 2px -2px #0E1119;
+    overflow-x: hidden;
+    padding: 0px 8px;
 }
+
+
 
 .container {
     text-align: left;
@@ -26,17 +30,24 @@ body {
     width: 80%;
     margin: 0 auto;
     display: table;
-    padding: 0 0 2em 0;
+    padding-bottom: 10px;
 }
 
 .container td,
 .container th {
-    
-    padding-bottom: 2%;
-    padding-top: 2%;
-    padding-left: 15px;
+
+    padding: 1% 10px;
     transition: 0.4s;
+    width: max-content;
+    height: max-content;
+    max-width: 220px;
+    min-width: 30px;
+    min-height: 30px;
+    text-align: center;
+    word-wrap: break-word;
 }
+
+
 
 .container tr:nth-child(odd) {
     background-color: #323C50;
@@ -49,6 +60,7 @@ body {
 .container th {
     background-color: #1F2739;
 }
+
 
 .container td:first-child {
     color: #f7f7f7;
@@ -64,3 +76,28 @@ body {
     transition-property: all;
     transition-timing-function: line;
 }
+
+.table-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: max-content;
+    max-width: 100%;
+    height: max-content;
+    overflow-x: scroll;
+    margin-bottom: 30px;
+    margin-top: 30px;
+}
+
+
+::-webkit-scrollbar {
+
+    height: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #1820347a;
+
+}
+
