--- a/src/app/Modules/Components/charge-wheel/charge-wheel.component.css
+++ b/src/app/Modules/Components/charge-wheel/charge-wheel.component.css
@@ -1,11 +1,3 @@
-.content-wheel1 {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 50px;
-    padding: 50px 0;
-}
 
 
 
@@ -68,7 +60,8 @@ p:nth-child(1)::-webkit-scrollbar-thumb:hover {
     justify-content: space-between;
     justify-items: center;
     align-items: center;
-
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .porcentajes {
