--- a/src/styles.css
+++ b/src/styles.css
@@ -372,3 +372,21 @@ button.cancel::before {
     left: 0;
     right: 0;
 }
+
+textarea{
+    background-color: #131A2E;
+    border-radius: 10px;
+    border: transparent 1px solid;
+    padding: 10px;
+    color: #fff;
+    outline: none;
+    transition: 0.5s;    
+}
+textarea:hover{
+    border:#3869B2 solid 1px;
+    transition: 0.5s;
+}
+textarea:focus{
+    border:#3869B2 solid 1px;
+    transition: 0.5s;
+}
