--- a/src/app/Modules/Components/charge-wheel/charge-wheel.component.html
+++ b/src/app/Modules/Components/charge-wheel/charge-wheel.component.html
@@ -1,19 +1,18 @@
 <div *ngIf="generate">
   <div class="content-wheel">
-    <div class="charge_wheel" *ngFor="let item of  this.view | Paginate: page_size: page_number; index as i">
-      <div class="porcentajes" style="--porcentaje: {{porcentajeNumerico}}">
+    <div class="charge_wheel" *ngFor="let item of  this.view | Paginate: page_size: page_number">
+      <div class="porcentajes" style="--porcentaje: {{item.itemPorcentajes}}">
         <div class="content">
           <div class="container">
-            <p [ngClass]="{
-            'animateLonger': item.itemName.length >= 20,
-            'animate': item.itemName.length < 20 && item.itemName.length > 11
-          }"> {{item.itemName}} </p>
-            <p> ID: {{item.itemId}} </p>
+            <p [ngClass]="{'animateLonger': item.itemName.length >= 20,'animate': item.itemName.length < 20 && item.itemName.length > 11}">
+               {{item.itemName}}
+            </p>
+            <p *ngIf="item.itemCode"> Cod: {{item.itemCode}} </p>
             <p *ngIf="item.itemOne"> Cod: {{item.itemOne}} </p>
             <p *ngIf="item.itemTwo"> {{item.itemTwo}} </p>
             <p *ngIf="item.itemThree"> {{item.itemThree}} </p>
             <p *ngIf="item.itemFour"> {{item.itemFour}} </p>
-            <p>100%</p>
+            <p>{{item.itemPorcentajes}}%</p>
           </div>
           <div class="actions">
             <button (click)="openModalUpdate(item)"><img src="../../../assets/icons/reload.svg"></button>
@@ -31,5 +30,4 @@
   <mat-paginator [length]="view.length" [pageSize]="page_size" [hidePageSize]=true (page)="handlePage($event)"
     showFirstLastButtons>
   </mat-paginator>
-
 </div>
