--- a/src/app/Modules/Pages/areas-try/areas-try.component.html
+++ b/src/app/Modules/Pages/areas-try/areas-try.component.html
@@ -1,2 +1,4 @@
-<app-icon-chart [view]="this.view" (dataToDelete)="delete($event)" (dataToUpdate)="update($event)"></app-icon-chart>
+<app-icon-chart [view]="this.view" (dataToDelete)="delete($event)" (dataToUpdate)="update($event)"(dataInformation)="ExtensInfo($event)"></app-icon-chart>
 <a><button (click)="openModalCreate()"class="add">Añadir</button></a>
+
+
