--- a/src/styles.css
+++ b/src/styles.css
@@ -192,9 +192,13 @@ app-footer {
     overflow-x: hidden !important;
 }
 
-
-.mdc-dialog__surface {
-    min-width: 35vw !important;
+.mat-mdc-dialog-actions{
+    gap: 10px;
+}
+app-extend-modal-alert{
+    display: flex;
+    flex-direction: column;
+    min-width: 30vw;
 }
 
 /*
@@ -212,9 +216,8 @@ app-footer {
 */
 input {
     background-color: #131A2E !important;
-
     height: 40px;
-    width: 100%;
+    width: 35vw;
     border-radius: 10px;
     border: transparent solid 1px;
     color: #ffff;
