--- a/src/app/Modules/Components/board-table/board-table.component.css
+++ b/src/app/Modules/Components/board-table/board-table.component.css
@@ -80,24 +80,41 @@ body {
 .table-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     width: max-content;
-    max-width: 100%;
+    max-width: 90%;
     height: max-content;
     overflow-x: scroll;
     margin-bottom: 30px;
     margin-top: 30px;
-}
+    margin-right: 30px;
 
+}
 
 ::-webkit-scrollbar {
 
     height: 10px;
 }
 
-::-webkit-scrollbar-track {
-    background: #1820347a;
+.actions button {
+    background: transparent;
+    border: none;
+    padding: 2px;
+  }
+  
+.actions {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    position: absolute;
+    margin-top: 10px;
+    right: 2vw;
+  }
+  
+  .actions img {
+    width: 15px;
+  }
 
+.table{
+    position: relative;
 }
 
