se esta implementado la infomracion extendida de cada objeto

--- a/src/app/Modules/Pages/grupos-view/grupos-view.component.html
+++ b/src/app/Modules/Pages/grupos-view/grupos-view.component.html
@@ -1,2 +1,2 @@
-<app-charge-wheel [view]="this.view" (dataToDelete)="delete($event)" (dataToUpdate)="update($event)"></app-charge-wheel>
+<app-charge-wheel [view]="this.view" (dataToDelete)="delete($event)" (dataToUpdate)="update($event)"(dataInformation)="ExtensInfo($event)"></app-charge-wheel>
 <a><button (click)="openModalCreate()"class="add">Añadir</button></a>
