--- a/src/app/Modules/Components/table-extend-information/table-extend-information.component.css
+++ b/src/app/Modules/Components/table-extend-information/table-extend-information.component.css
@@ -6,21 +6,67 @@
     padding: 10px;
 
 }
+.herencias{
+    position: fixed;
+    display: none;
+    background-color: #040a17ad;
+    opacity: 0;;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right:0;
+    transition: 1s;
+}
+.Close{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: #fff;
+}
+.relaciones{
+    display: flex;
+    opacity: 1;
+    justify-content: center;
+    align-items: center;
+    transition: 1s;
+    
+}
+.container-relaciones{
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    max-width:800px;
+    padding: 1.5rem 2rem;
+    justify-content: space-between;
+    margin: 0;
+    grid-auto-flow: dense;
+    gap: 10px;
 
+}
+.tablas-relaciones{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(24, 32, 52);
+    border-radius: 10px;
+    padding: 10px;
+    border: solid #203363 1px;
+}
 .container-datos{
     display: flex;
     justify-content: center;
 }
-
-.lista-datos{
-    display: grid;
-    max-height: 800px;
-    grid-template-rows: repeat(auto-fit, minmax(70px, 80px));
-    grid-gap: 0px 20px;
-    border-radius: 15px;
-    justify-content: center;
+.lista-datos {
+    display: flex;
+    flex-wrap: wrap;
+    max-width:800px;
+    padding: 1.5rem 2rem;
+    justify-content: space-between;
     padding: 0;
     margin: 0;
+    grid-auto-flow: dense;
+    gap: 10px;
 }
 .lista-datos li{
     display: flex;
@@ -30,6 +76,7 @@
     gap: 10px;
     width: 200px;
     border-bottom: solid 1px #5555556e;
+    overflow: hidden;
 }
 .lista-datos li span {
     display: flex;
