--- a/src/app/Modules/Components/extend-modal-form/extend-modal-form.component.css
+++ b/src/app/Modules/Components/extend-modal-form/extend-modal-form.component.css
@@ -19,6 +19,7 @@ div.mat-dialog-content{
     display: flex;
     flex-direction: column;
     gap: 20px;
+    width: 100%;
 }
 
 .mdc-dialog__title {
