--- a/src/app/Modules/Components/charge-wheel-sole/charge-wheel-sole.component.css
+++ b/src/app/Modules/Components/charge-wheel-sole/charge-wheel-sole.component.css
@@ -2,7 +2,7 @@
 
 
 .container {
-    width: 100px;
+    width: 150px;
     overflow: hidden;
     white-space: nowrap;
   }
@@ -71,11 +71,6 @@ p:nth-child(1)::-webkit-scrollbar-thumb:hover {
     justify-content: center;
 }
 
-.content p:nth-child(2),
-.content p:nth-child(3) {
-    color: #9C9C9C;
-}
-
 .porcentajes .content {
 
     display: flex;
@@ -84,10 +79,11 @@ p:nth-child(1)::-webkit-scrollbar-thumb:hover {
     justify-content: center;
     background-color: #232222;
     padding: 20px;
-    width: 110px;
-    height: 110px;
+    width: 180px;
+    height: 180px;
     border-radius: 50%;
     position: absolute;
+    font-size: 1.3em;
 }
 
 circle {
@@ -97,7 +93,7 @@ circle {
     bottom: 0%;
     right: 0%;
     fill: none;
-    stroke-width: 15px;
+    stroke-width: 18px;
     transform: rotate(-90deg);
     transform-origin: 50%;
     stroke-dasharray: 100 100;
@@ -141,4 +137,9 @@ circle:nth-child(2) {
   
   .actions img {
     width: 15px;
+  }
+
+  .container p.date {
+    font-size: 0.8em;
+    color: #9C9C9C;
   }
