--- a/src/app/Modules/Components/charge-wheel/charge-wheel.component.css
+++ b/src/app/Modules/Components/charge-wheel/charge-wheel.component.css
@@ -1,21 +1,30 @@
 .container {
-    width: 100px;
-    overflow: hidden;
-    white-space: nowrap;
-  }
-  .container p {
-    text-align: center; 
-  }
-  .animate{
-    position: relative;
-    right: -100%;
-    animation: marquee 6s linear infinite;
-  }
-  .animateLonger{
-    position: relative;
-    right: -100%;
-    animation: marquee 16s linear infinite;
-  }
+  width: 100px;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.container p {
+  text-align: center;
+}
+
+.container p.date {
+  font-size: 0.8em;
+  color: #9C9C9C;
+}
+
+
+.animate {
+  position: relative;
+  right: -100%;
+  animation: marquee 6s linear infinite;
+}
+
+.animateLonger {
+  position: relative;
+  right: -100%;
+  animation: marquee 16s linear infinite;
+}
 
 @keyframes marquee {
   0% {
@@ -48,25 +57,25 @@ p:nth-child(1)::-webkit-scrollbar-thumb:hover {
 
   height: 2px;
 }
+
 .content-wheel {
-    display: grid;
-    grid-gap: 20px;
-    width: 100%;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    justify-content: center;
-    justify-items: center;
-    align-items: center;
+  display: grid;
+  grid-gap: 20px;
+  width: 100%;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
 }
+
 .porcentajes {
   position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.content p:nth-child(2),
-.content p:nth-child(3) {
-  color: #9C9C9C;
-}
+
+
 .porcentajes .content {
 
   display: flex;
@@ -75,8 +84,8 @@ p:nth-child(1)::-webkit-scrollbar-thumb:hover {
   justify-content: center;
   background-color: #232222;
   padding: 20px;
-  width: 110px;
-  height: 110px;
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
   position: absolute;
 }
