--- a/src/app/Modules/Components/icon-chart/icon-chart.component.html
+++ b/src/app/Modules/Components/icon-chart/icon-chart.component.html
@@ -10,7 +10,8 @@
             'animateLonger': item.itemName.length >= 20,
             'animate': item.itemName.length < 20 && item.itemName.length > 11
           }">{{ item.itemName }}</p>
-          <p>{{ item.itemOne }}</p>
+          <p *ngIf="item.itemCode"> {{item.itemCode}} </p>
+          <p *ngIf="item.itemOne">{{ item.itemOne }}</p>
           <p *ngIf="item.itemTwo">{{ item.itemTwo }}</p>
           <p *ngIf="item.itemThree">{{ item.itemThree }}</p>
         </div>
