--- a/src/app/Modules/Pages/areas-view/areas/areas.component.html
+++ b/src/app/Modules/Pages/areas-view/areas/areas.component.html
@@ -1,3 +1,3 @@
 <app-icon-chart [view]="this.view" (dataToUpdate)="Update($event)" (dataToDelete)="Delete($event)"></app-icon-chart>
-<a><button (click)="openModalCreate()"class="add">Añadir</button></a>
-
+<app-board-table [view]="this.tableView" (dataToUpdate)="Update($event)" (dataToDelete)="Delete($event)"></app-board-table>
+<a><button (click)="openModalCreate()" class="add">Añadir</button></a>
