implementacion de los datos extras en los objetos

--- a/src/app/Modules/Components/table-extend-information/table-extend-information.component.html
+++ b/src/app/Modules/Components/table-extend-information/table-extend-information.component.html
@@ -5,28 +5,54 @@
 <mat-dialog-content>
     <div class="container-datos">
         <div class="container-datos">
-            <ul class="lista-datos">
+            <ul class="lista-datos" #relaciones>
                 <li *ngFor="let item of incomeData | keyvalue ;let i = index">
                     <label>{{ item.key }}</label>
-                    <ng-container *ngIf="!isValueArray(item.value)">
+                    <ng-container *ngIf="!isValueArray(item.value) && !isValueObject(item.value) ">
                         <span>{{ item.value }}</span>
                     </ng-container>
                     <div *ngIf="isValueObject(item.value)  ">
-                        <button #relaciones class="ver" (click)="extras(i)">ver mas</button>
-                        <div  class="herencias">
-                            <div class="container-relaciones" >
-                                <button class="Close" (click)="close(i)">X</button> 
-                                <ul class="tablas-relaciones">
-                                    <div *ngFor="let obj of object | keyvalue">
-                                        <ul>
-                                            <li>
-                                                <label>{{obj.key}}</label>
-                                                <span>{{obj.value}}</span>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </ul>
-                            </div> 
+                        <button class="ver" (click)="extras(i)">ver mas</button>
+                        <div>
+                            <div class="herencias herencias{{ i }}">
+                                <div class="container-relaciones">
+                                    <button class="Close" (click)="close(i)">X</button>
+                                    <ul class="tablas-relaciones">
+                                        <mat-dialog-content>
+                                        <div *ngFor="let obj of object | keyvalue">
+                                            <ul>
+                                                <li>
+                                                    <label>{{obj.key}}</label>
+                                                    <span>{{obj.value}}</span>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </mat-dialog-content>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div *ngIf="isValueArray(item.value)">
+                        <button class="ver" (click)="extras(i)">ver mas</button>
+                        <div class="herencias herencias{{ i }}">
+                            <div class="container-relaciones">
+                                <button class="Close" (click)="close(i)">X</button>
+                                <div *ngFor="let obj of info | keyvalue">
+                                    <ul class="tablas-relaciones">
+                                        <mat-dialog-content>
+                                        <div *ngFor="let item of obj.value | keyvalue">
+                                            <ul>
+                                                <li>
+                                                    <label>{{ item.key }}</label>
+                                                    <span>{{ item.value }}</span>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </mat-dialog-content>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </li>
