--- a/src/app/Modules/Components/table-extend-information/table-extend-information.component.css
+++ b/src/app/Modules/Components/table-extend-information/table-extend-information.component.css
@@ -36,11 +36,11 @@
     display: flex;
     flex-wrap: wrap;
     max-width:800px;
-    padding: 1.5rem 2rem;
     justify-content: space-between;
     margin: 0;
     grid-auto-flow: dense;
     gap: 10px;
+
 
 }
 .tablas-relaciones{
@@ -50,8 +50,11 @@
     justify-content: center;
     background-color: rgb(24, 32, 52);
     border-radius: 10px;
-    padding: 10px;
+    padding: 0;
     border: solid #203363 1px;
+
+
+
 }
 .container-datos{
     display: flex;
@@ -61,7 +64,7 @@
     display: flex;
     flex-wrap: wrap;
     max-width:800px;
-    padding: 1.5rem 2rem;
+    max-height: 80vh;
     justify-content: space-between;
     padding: 0;
     margin: 0;
@@ -72,7 +75,7 @@
     display: flex;
     flex-direction: column;
     padding: 5px 0;
-    padding-top: 20px;
+    padding-top: 5px;
     gap: 10px;
     width: 200px;
     border-bottom: solid 1px #5555556e;
@@ -82,4 +85,7 @@
     display: flex;
     color: #848484;
     font-size: 0.95em;
+}
+ul{
+    padding: 10px;
 }
