se quita las flechas de los inputs de tipo number

--- a/src/app/Modules/Components/icon-chart/icon-chart.component.html
+++ b/src/app/Modules/Components/icon-chart/icon-chart.component.html
@@ -3,7 +3,7 @@
     <div class="slide-item" *ngFor="let item of view | Paginate: page_size: page_number">
       <div class="area">
         <picture>
-          <img width="64" height="64" src={{item.iconUrl}} alt="artificial-intelligence" />
+          <img width="64" height="64" src={{item.iconUrl}} alt="Icono" />
         </picture>
         <div class="container">
           <p [ngClass]="{
