--- a/src/app/Modules/Components/table-extend-information/table-extend-information.component.css
+++ b/src/app/Modules/Components/table-extend-information/table-extend-information.component.css
@@ -19,8 +19,9 @@
 }
 .Close{
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 13px;
+    right: 18px;
+    background: #810000;
     color: #fff;
 }
 .relaciones{
